First works on FilterExtractor